[metadata]
name = quantnote_api
version = 0.0.1
description = Client API library for QuantNote
long_description = file: README.md, LICENSE
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages =
    quantnote_api
    quantnote_api.models
install_requires =
    pandas==1.3.5
    requests==2.27.1
    tqdm==4.62.3
    typing_extensions==4.1.1
    urllib3==1.26.8
